# soil

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: config.h.in
include/soil/: common_signals.hpp  signal_process.hpp  version.hpp
include/soil/dsp/: common_signals.hpp  signal_process.hpp
include/soil/geo/: point.hpp
include/soil/signal/: base.hpp  common_signals.hpp  convert.hpp  processor.hpp  signal.hpp  spectrum.hpp  tuner.hpp  wavement.hpp  window.hpp
include/soil/util/: parameterized.hpp
src/: common_signals.cpp  misc.hpp  signal_process.cpp  signal_process_p.hpp  version.cpp
src/dsp/: common_signals.cpp  signal_process.cpp  signal_process_p.hpp
src/signal/: base.cpp  common_signals.cpp  convert.cpp  processor.cpp  signal.cpp  signal_process.cpp  signal_process_p.hpp  spectrum.cpp  tuner.cpp  wavement.cpp  window.cpp
src/util/: parameterized.cpp
test/: test_algo.cpp  test_eigen.cpp  test_point.cpp  test_signal.cpp  test_version.cpp
